--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
     "lint": "biome check .",
-    "lint:fix": "biome check --write ."
+    "lint:fix": "biome check --write .",
+    "prepare": "husky",
+    "postinstall": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,json}": "biome check --write --no-errors-on-unmatched"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +48,8 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.3",
+    "husky": "9.1.7",
+    "lint-staged": "16.1.2",
     "rollup": "^4.44.0",
     "rollup-plugin-dts": "^6.2.1",
     "tslib": "^2.8.1",
