--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "prepare": "husky",
-    "postinstall": "husky"
+    "postinstall": "husky",
+    "prepublishOnly": "pnpm build",
+    "release": "semantic-release"
   },
   "lint-staged": {
     "*.{js,ts,json}": "biome check --write --no-errors-on-unmatched"
@@ -48,10 +50,17 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.3",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "11.0.3",
+    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/release-notes-generator": "14.0.3",
     "husky": "9.1.7",
     "lint-staged": "16.1.2",
     "rollup": "^4.44.0",
     "rollup-plugin-dts": "^6.2.1",
+    "semantic-release": "24.2.5",
     "tslib": "^2.8.1",
     "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
