ci: add the branch protection skip hack in the gh actions

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          check-latest: true
+          token: ${{ secrets.ACTIONS_BRANCH_PROTECTION_BYPASS }}
 
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
