--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           check-latest: true
+          token: ${{ secrets.ACTIONS_BRANCH_PROTECTION_BYPASS }}
           fetch-depth: 0
 
       - name: Install Node.js 20
