--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@semantic-release/github": "11.0.3",
     "@semantic-release/npm": "12.0.1",
     "@semantic-release/release-notes-generator": "14.0.3",
+    "@vitest/coverage-v8": "3.2.4",
     "husky": "9.1.7",
     "lint-staged": "16.1.2",
     "rollup": "^4.44.0",
