--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           token: ${{ secrets.ACTIONS_BRANCH_PROTECTION_BYPASS }}
 
+      - name: Install pnpm with version specified in 'packageManager'
+        uses: pnpm/action-setup@v4
+
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
